unpackaged/main/default/objects/PR_Phasing__c/PR_Phasing__c.object-meta.xml
<CustomObject>
    <description>PR Phasing amount per month</description>
    <label>PR Phasing</label>
    <nameField>
        <displayFormat>PRP-{000000}</displayFormat>
        <label>PR Phasing Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PR Phasings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>