unpackaged/main/default/objects/PR_Phasing__c/fields/Campaign_Spend_Created__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Spend_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campaign Spend Created?</label>
    <type>Checkbox</type>
</CustomField>