unpackaged/main/default/objects/PR_Phasing__c/fields/PR_Detail__c.field-meta.xml
<CustomField>
    <fullName>PR_Detail__c</fullName>
    <description>PR Detail Record For this Phasing Month/Amount</description>
    <label>PR Detail</label>
    <referenceTo>PR_Detail__c</referenceTo>
    <relationshipLabel>PR Phasing</relationshipLabel>
    <relationshipName>PR_Phasings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>