unpackaged/main/default/objects/PR_Phasing__c/fields/PR_Header__c.field-meta.xml
<CustomField>
    <fullName>PR_Header__c</fullName>
    <label>PR Header</label>
    <referenceTo>PR_Header__c</referenceTo>
    <relationshipLabel>PR Phasings</relationshipLabel>
    <relationshipName>PR_Phasings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>