unpackaged/main/default/objects/PR_Phasing__c/fields/PR_Header_RecordType__c.field-meta.xml
<CustomField>
    <fullName>PR_Header_RecordType__c</fullName>
    <formula>PR_Header__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR Header RecordType</label>
    <type>Text</type>
</CustomField>