unpackaged/main/default/objects/PR_Phasing__c/fields/PR_Header_Status__c.field-meta.xml
<CustomField>
    <fullName>PR_Header_Status__c</fullName>
    <formula>TEXT(PR_Header__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR Header Status</label>
    <type>Text</type>
</CustomField>