unpackaged/main/default/objects/PR_Phasing__c/fields/PR_Request_Currency__c.field-meta.xml
<CustomField>
    <fullName>PR_Request_Currency__c</fullName>
    <formula>TEXT(PR_Header__r.CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR Request Currency</label>
    <type>Text</type>
</CustomField>